Updated CV, now it is in Google Drive

--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
         <div class="container mx-auto h-auto py-4 pb-16 md:pb-0 md:py-8 lg:py-16">
             <div class="flex flex-col justify-center text-center text-sm sm:flex-row sm:text-lg">
                 <div>
-                    <a href="./Nick_Yelmer_CV.pdf" download
+                    <a href="https://drive.google.com/file/d/1k3Dt5xejWGWsg7FN7RJo9cWWIY34TjaL/view?usp=sharing"
+                        target="blank"
                         class="lg:inline-block lg:mt-0 text-white p-2 mx-2 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
                         CV
                     </a>
