--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             x-on:scroll.window="atTop =( window.pageYOffset > 10) ? false : true ">
             <nav x-bind:class='{ "shadow-md": !atTop }' id="navbar"
                 class="flex items-center justify-between flex-wrap bg-gray-800 p-6">
-                <div class="block lg:hidden">
+                <div class="block md:hidden">
                     <button @click="open = !open"
                         class="flex items-center px-3 py-2 border rounded text-gray-200 border-gray-400 hover:text-white hover:border-white">
                         <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -28,21 +28,21 @@
                     </button>
                 </div>
                 <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-                    <div class="text-sm lg:flex-grow text-center">
+                    <div class="text-sm md:flex-grow text-center">
                         <a href="#"
-                            class="block mt-4 lg:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
+                            class="block mt-4 md:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
                             About
                         </a>
                         <a href="#tech"
-                            class="block mt-4 lg:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
+                            class="block mt-4 md:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
                             Technologies
                         </a>
                         <a href="#experience"
-                            class="block mt-4 lg:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
+                            class="block mt-4 md:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
                             Experience
                         </a>
                         <a href="#contact"
-                            class="block mt-4 lg:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
+                            class="block mt-4 md:inline-block lg:mt-0 text-white p-2 mr-4 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
                             Contact
                         </a>
                     </div>
