changed email temporarily

--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
                     </a>
                 </div>
                 <div>
-                    <a href="mailto:nick@yelmer.io"
+                    <a href="mailto:nyelmer19@gmail.com"
                         class="lg:inline-block lg:mt-0 text-white p-2 mx-2 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
-                        nick@yelmer.io
+                        nyelmer19@gmail.com
                     </a>
                 </div>
                 <div>
