--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             I am about to finish my final year at the <span class="bg-gray-200 text-black px-1"><a
                                     href="https://www.qmul.ac.uk/" target="_blank" rel="noopener noreferrer">Queen
                                     Mary University of London</a></span> with a first-class degree.
-                            I love developing efficent, smart and scalable solutions.
+                            I love developing efficient, smart and scalable solutions.
                             I enjoy working with teams and providing my expertise to others.
                         </p>
                     </div>
@@ -393,9 +393,9 @@
                     </a>
                 </div>
                 <div>
-                    <a href="mailto:nyelmer19@gmail.com"
+                    <a href="mailto:nick@yelmer.io"
                         class="lg:inline-block lg:mt-0 text-white p-2 mx-2 transition duration-500 transform hover:text-white hover:bg-gray-100 hover:text-gray-900 hover:-translate-y-1">
-                        nyelmer19@gmail.com
+                        nick@yelmer.io
                     </a>
                 </div>
                 <div>
