Change in details

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 My responsibilities at <span class="bg-gray-200 text-black px-1"><a
                                         href="https://vismart.co.uk" target="_blank"
                                         rel="noopener noreferrer">Vismart</a></span> included market research for the
-                                upcoming product line for the UK, preparing for Intersec 2019 Exhibition (Dubai) and
+                                upcoming product line for the UK, preparing and participating in Intersec 2019 Exhibition (Dubai) and
                                 meeting weekly with developers to prepare UK launch of the smart home systems.
                             </p>
                         </div>
